# locallyvalid

./: .gitignore  Cargo.toml  Trunk.toml  index.html  index.scss  reset.css  rust-toolchain.toml
.github/workflows/: deploy.yml
src/: data.json  human.rs  leptos_ext.rs  lol.json  main.rs  visibility.rs
