[package]
name = "locallyvalid"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
either = "1"
instant = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"

console_error_panic_hook = "0.1.7"
console_log = "1"
gloo-render = "0.2.0"
leptos = { version = "0.6", features = ["csr", "rustls"] }
web-sys = { version = "0.3.66", features = ["Element", "Document", "DomRect"] }

[patch.crates-io]
# leptos = { git = 'https://github.com/Giovanni-Tably/leptos', branch = "patches-3"}
